# cala-bot

./: .env  .gitignore  Cargo.toml
crypto-feed/: Cargo.toml
crypto-feed/src/: args.rs  cli_app.rs  main.rs  tui_app.rs
crypto-feed/src/binance/: binance.rs
crypto-feed/src/cli_app/: cli_app.rs
crypto-feed/src/tui_app/: actions.rs  app.rs  crossterm_ui.rs  inputs.rs  state.rs  ui.rs
crypto-feed/src/tui_app/inputs/: events.rs  input.rs  key.rs
