[package]
name = "crypto-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6.8"
log = { version = "0.4.17", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tui = { version = "0.19.0", features = ["crossterm", "serde"] }
tui-logger = "0.9.0"
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.3.1"
